2016-07-04  NIIBE Yutaka  <gniibe@fsij.org>

	* doc/conf.py: Remove 'sphinx.ext.pngmath' and 'sphinx.ext.mathjax'.
	Reported by Kenji Rikitake.

2016-07-01  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.1.
	* src/usb-ccid.c (poll_event_intr, ccid_thread): Follow the
	change.

2016-06-21  Niibe Yutaka  <gniibe@fsij.org>

	* doc/index.rst: Update documentation by an example
	Ed25519/cv25519.

2016-06-17  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.0.

2016-06-15  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.ld.in (__process2_stack_size__): Update
	thread size for rng by examining NeuG.

	* src/usb-ccid.c (poll_event_intr): New.

2016-06-14  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (usb_device_reset): Rename from
	usb_cb_device_reset.
	(usb_ctrl_write_finish): Rename from usb_cb_ctrl_write_finish.
	(usb_setup): Rename from usb_cb_setup.
	(usb_get_descriptor): Rename from usb_cb_get_descriptor.
	(usb_set_configuration): New.
	(usb_interrupt_handler): New.

	* src/usb-ccid.c (usb_tx_done): Rename from usb_cb_tx_done.
	(usb_rx_ready): Rename from usb_cb_rx_ready.
	(usb_event_handle): New.
	(ccid_thread): Use usb_event_handle.

	* src/usb-msc.c (EP6_IN_Callback): Update to new USB API.
	(EP6_OUT_Callback): Likewise.

	* src/usb_ctrl.c (usb_device_reset): Rename from
	usb_cb_device_reset.
	(vcom_port_data_setup): Update to new USB API.
	(usb_ctrl_write_finish): Rename from usb_cb_ctrl_write_finish.
	(usb_setup): Rename from usb_cb_setup.
	(usb_set_configuration): New, based on usb_cb_handle_event.
	(usb_set_interface): Rename from usb_cb_interface.
	(usb_get_interface): New.
	(usb_get_status_interface): New.

	* src/usb_desc.c (usb_get_descriptor): Rename from
	usb_cb_get_descriptor.

2016-06-02  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/regnual.c (usb_cb_tx_done): Follow the change of USB
	API.

	* regnual/reset.c: Rename from sys.c.

2016-06-01  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py (stlinkv2.__init__): Don't