@@ -1,3 +1,9 @@
+2016-07-06  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/pin-cir.c (cir_getchar): Use chopstx_poll.
+	* src/usb-ccid.c (usb_tx_done): Fix ifdef condition.
+	* src/usb_ctrl.c (usb_ctrl_write_finish): Fix ifdef nesting.
+
 2016-07-04  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* doc/conf.py: Remove 'sphinx.ext.pngmath' and 'sphinx.ext.mathjax'.
